--- a/dandiset.yaml
+++ b/dandiset.yaml
@@ -117,7 +117,8 @@ contributor:
   - dcite:Funder
   schemaKey: Organization
   url: http://www.klingfund.org/
-- contactPoint: []
+- awardNumber: R01NS34814, P30NS050274, R01NS089652
+  contactPoint: []
   identifier: https://ror.org/01cwqze88
   includeInCitation: false
   name: National Institutes of Health
@@ -126,7 +127,19 @@ contributor:
   schemaKey: Organization
   url: http://www.nih.gov/
 dateCreated: '2022-03-21T12:35:09.864743+00:00'
-description: O'Connor - TG dataset
+description: Touch perception depends on integrating signals from multiple types of
+  peripheral mechanoreceptors. Merkel-cell associated afferents are thought to play
+  a major role in form perception by encoding surface features of touched objects.
+  However, activity of Merkel afferents during active touch has not been directly
+  measured. Here, we show that Merkel and unidentified slowly adapting afferents in
+  the whisker system of behaving mice respond to both self-motion and active touch.
+  Touch responses were dominated by sensitivity to bending moment (torque) at the
+  base of the whisker and its rate of change and largely explained by a simple mechanical
+  model. Self-motion responses encoded whisker position within a whisk cycle (phase),
+  not absolute whisker angle, and arose from stresses reflecting whisker inertia and
+  activity of specific muscles. Thus, Merkel afferents send to the brain multiplexed
+  information about whisker position and surface features, suggesting that proprioception
+  and touch converge at the earliest neural level.
 ethicsApproval: []
 id: DANDI:000226/draft
 identifier: DANDI:000226
